# trifast

./: README.md  pyproject.toml
benchmark_plots/: tri_attn_bwd.csv  tri_attn_fwd.csv
configs/: _bwd_b_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-0.json  _bwd_b_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-6.json  _bwd_b_NVIDIA-A100-SXM4-80GB_8-0.json  _bwd_b_NVIDIA-GeForce-RTX-3090_8-6.json  _bwd_kv_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-0.json  _bwd_kv_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-6.json  _bwd_kv_NVIDIA-A100-SXM4-80GB_8-0.json  _bwd_kv_NVIDIA-GeForce-RTX-3090_8-6.json  _bwd_preprocess_4ec537e9cadf4ca38698e8d57e424e8a0ece6f0641dbf4674c6e8a7fd5075889_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-6.json  _bwd_q_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-0.json  _bwd_q_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-6.json  _bwd_q_NVIDIA-A100-SXM4-80GB_8-0.json  _bwd_q_NVIDIA-GeForce-RTX-3090_8-6.json  _fwd_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-0.json  _fwd_66f65e18a914d0e9e57cadb71143469db92f4fc5fd6e81ff44622736691e9c3f_4e9ecbc19d4c39f6c6df862f64011587f0637771025149ae4c2da9165c841e6d_8-6.json  _fwd_NVIDIA-A100-SXM4-80GB_8-0.json  _fwd_NVIDIA-GeForce-RTX-3090_8-6.json  bwd_db.yaml  fwd.yaml  (+3 more)
(+55 files in other folders)
