[project]
name = "pairformer-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Liam Atkinson", email = "liamatkinson@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beartype>=0.19.0",
    "deepspeed>=0.16.0",
    "einops>=0.8.0",
    "jaxtyping>=0.2.36",
    "numpy>=2.1.3",
    "setuptools>=75.6.0",
    "torch>=2.5.1",
    "triton>=3.1.0",
]

[project.scripts]
pairformer-kernel = "pairformer_kernel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib>=3.9.2",
    "neovim>=0.3.1",
    "pandas>=2.2.3",
    "pudb>=2024.1.3",
    "ruff>=0.8.0",
    "seaborn>=0.13.2",
]
testing = [
    "deepspeed>=0.16.0",
    "hypothesis>=6.122.3",
    "pytest>=8.3.3",
]
benchmark = [
    "deepspeed>=0.16.0",
]
